--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h1 class="page-title">Bienvenue !</h1>
         <p class="lead">Cliquez sur les boutons ci-dessous pour découvrir les différents cv :</p>
         <div class="text-center">
-          <a href="page1.html" class="btn me-2">Page 1</a>
+          <a href="Personal/Gojo.html" class="btn me-2">Gojo</a>
           <a href="page2.html" class="btn me-2">Page 2</a>
           <a href="cvmbob.html" class="btn">BOB</a>
         </div>
